[gd_scene load_steps=23 format=3 uid="uid://bps2nb7vya4t4"]

[ext_resource type="Texture2D" uid="uid://dushpa84i0243" path="res://assets/gui_asset/field.png" id="1_2453f"]
[ext_resource type="Script" path="res://scenes/scripts/pause_menu.gd" id="1_kscq8"]
[ext_resource type="Texture2D" uid="uid://bp06s2cxke6ng" path="res://assets/gui_asset/b_7.png" id="2_7deal"]
[ext_resource type="Shader" path="res://scenes/shaders/pause_menu.gdshader" id="2_j5wbo"]
[ext_resource type="Texture2D" uid="uid://d0gi5yqmmoe6x" path="res://assets/gui_asset/b_8.png" id="3_5ictp"]
[ext_resource type="FontFile" uid="uid://batjodd5b3262" path="res://assets/GROBOLD.ttf" id="5_7fdt8"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xxjl8"]
shader = ExtResource("2_j5wbo")
shader_parameter/lod = 0.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2xyqd"]
texture = ExtResource("2_7deal")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_chfwq"]
texture = ExtResource("2_7deal")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4t164"]
texture = ExtResource("2_7deal")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_s7hg3"]
texture = ExtResource("2_7deal")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_m0ai0"]
texture = ExtResource("2_7deal")

[sub_resource type="Theme" id="Theme_sahp4"]
Button/styles/disabled = SubResource("StyleBoxTexture_2xyqd")
Button/styles/focus = SubResource("StyleBoxTexture_chfwq")
Button/styles/hover = SubResource("StyleBoxTexture_4t164")
Button/styles/normal = SubResource("StyleBoxTexture_s7hg3")
Button/styles/pressed = SubResource("StyleBoxTexture_m0ai0")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xjpym"]
texture = ExtResource("3_5ictp")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gwt8p"]
texture = ExtResource("3_5ictp")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0je4b"]
texture = ExtResource("3_5ictp")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_glm71"]
texture = ExtResource("3_5ictp")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2au5j"]
texture = ExtResource("3_5ictp")

[sub_resource type="Theme" id="Theme_358t3"]
Button/constants/outline_size = 9
Button/font_sizes/font_size = 30
Button/fonts/font = ExtResource("5_7fdt8")
Button/styles/disabled = SubResource("StyleBoxTexture_xjpym")
Button/styles/focus = SubResource("StyleBoxTexture_gwt8p")
Button/styles/hover = SubResource("StyleBoxTexture_0je4b")
Button/styles/normal = SubResource("StyleBoxTexture_glm71")
Button/styles/pressed = SubResource("StyleBoxTexture_2au5j")

[sub_resource type="Animation" id="Animation_1ah07"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_hpvsn"]
resource_name = "blur"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.857]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lsu2i"]
_data = {
"RESET": SubResource("Animation_1ah07"),
"blur": SubResource("Animation_hpvsn")
}

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kscq8")

[node name="ColorRect" type="ColorRect" parent="."]
top_level = true
z_index = 2
material = SubResource("ShaderMaterial_xxjl8")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="."]
top_level = true
z_index = 7
layout_mode = 0
offset_left = 596.0
offset_top = 427.0
offset_right = 1385.0
offset_bottom = 612.0
texture = ExtResource("1_2453f")

[node name="Button" type="Button" parent="."]
top_level = true
z_index = 8
layout_mode = 0
offset_left = 1186.0
offset_top = 461.0
offset_right = 1303.0
offset_bottom = 586.0
tooltip_text = "PLAY"
theme = SubResource("Theme_sahp4")

[node name="Button2" type="Button" parent="."]
top_level = true
z_index = 8
layout_mode = 0
offset_left = 690.0
offset_top = 461.0
offset_right = 810.0
offset_bottom = 581.0
tooltip_text = "MAIN MENU"
theme = SubResource("Theme_358t3")
text = "MENU"

[node name="Button3" type="Button" parent="."]
top_level = true
z_index = 8
layout_mode = 0
offset_left = 916.0
offset_top = 451.0
offset_right = 1059.0
offset_bottom = 594.0
tooltip_text = "MAIN MENU"
theme = SubResource("Theme_358t3")
text = "Restart"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lsu2i")
}

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
